# hookt

./: .travis.yml  LICENSE  README.md  hookt.py  pyproject.toml
.github/workflows/: echo.yml
tests/: test_functions.py  test_triggergroups.py
