[tool.poetry]
name = "hookt"
version = "0.1.0"
description = "Python function hooks using decorators."
authors = ["nanananisore"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
anyio = "^1.2.3"
wrapt = "^1.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
