[tool.poetry]
name = "hookt"
version = "0.1.4"
description = "Asynchronous function hooks using decorators."
authors = ["nanananisore"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/nanananisore/hookt"

keywords = ["hook", "anyio", "event", "decorator", "async"]


[tool.poetry.dependencies]
python = "^3.7"
anyio = "^1.2.3"
wrapt = "^1.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
